--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,28 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <div class="searchContainer">
+    <img src="./../assets/images/search_icon.png" alt="search icon">
+    <input type="text" name="" value="" placeholder="What do you want to find out?">
+    <img src="./../assets/images/search_settings.png" alt="settings">
+  </div>
+
+  <div class="userContainer">
+    <p>Your name</p>
+    <img src="./../assets/images/user_icon.png" alt="user">
+  </div>
+
+  <div class="sortingContainer">
+    <p>Sorting by:</p>
+    <ul>
+      <li>
+        <button type="button" name="button">date</button>
+      </li>
+      <li>
+        <button type="button" name="button">count of views</button>
+      </li>
+      <li>
+        <label for="word">name or sentence</label>
+        <input type="text" name="word" value="">
+      </li>
+    </ul>
+  </div>
+</div>
