--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -1,3 +1,27 @@
-<p>
-  search-item works!
-</p>
+<div class="searchItem">
+  <img src="" alt="">
+  <div class="actionsContainer">
+    <div class="action">
+      <img src="" alt="">
+      <span class="count">10</span>
+    </div>
+
+    <div class="action">
+      <img src="" alt="">
+      <span class="count">100</span>
+    </div>
+
+    <div class="action">
+      <img src="" alt="">
+      <span class="count">52</span>
+    </div>
+
+    <div class="action">
+      <img src="" alt="">
+      <span class="count">2</span>
+    </div>
+
+  </div>
+  <h3 class="itemTitle"></h3>
+  <button type="button" name="button">more ...</button>
+</div>
