temp changes to search-list

--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -1,1 +1,3 @@
-<app-search-item></app-search-item>
+<div class="searchList" *ngIf="searchItems$ | async as searchItems">
+  <app-search-item [searchItems]="searchItems.items"></app-search-item>
+</div>
