--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,19 @@
 <div class="header">
   <div class="searchContainer">
-    <img src="./../assets/images/search_icon.png" alt="search icon">
-    <input type="text" name="" value="" placeholder="What do you want to find out?">
-    <img src="./../assets/images/search_settings.png" alt="settings">
+    <img src="./../assets/images/search_icon.png" alt="search icon" class="logo">
+    <div class="searchInput">
+      <input type="text" name="" value="" placeholder="What do you want to find out?">
+      <button type="button" name="button">search</button>
+    </div>
+    <button type="button"
+            name="button"
+            class="settingsBtn"
+            (click)="toggleSeetings()"></button>
+    <!-- <img src="./../assets/images/search_settings.png" alt="settings" class="settings"> -->
   </div>
-
-  <div class="userContainer">
-    <p>Your name</p>
-    <img src="./../assets/images/user_icon.png" alt="user">
-  </div>
-
-  <div class="sortingContainer">
-    <p>Sorting by:</p>
-    <ul>
-      <li>
-        <button type="button" name="button">date</button>
-      </li>
-      <li>
-        <button type="button" name="button">count of views</button>
-      </li>
-      <li>
-        <label for="word">name or sentence</label>
-        <input type="text" name="word" value="">
-      </li>
-    </ul>
-  </div>
+  <app-login></app-login>
 </div>
+
+<ng-container *ngIf="settingsShown">
+  <app-filter></app-filter>
+</ng-container>
