--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,21 +1,76 @@
 .header {
   background-color: #e5e5e5;
   width: 100%;
-  height: 175px;
+  height: 80px;
+  margin-bottom: 45px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
   .searchContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
 
-  .userContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+    .logo {
+      margin-right: 10px;
+    }
 
-  .sortingContainer ul {
-    display: flex;
+    .searchInput {
+      display: flex;
+
+      input {
+        width: 396px;
+        height: 24px;
+        background-color: #efefef;
+        box-sizing: border-box;
+        border: none;
+        padding-left: 6px;
+
+        &::placeholder {
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 14px;
+          display: flex;
+          align-items: center;
+          color: #929292;
+        }
+      }
+
+      button {
+        height: 24px;
+        width: 80px;
+        background: #2F80ED;
+        border-radius: 0px 4px 4px 0px;
+        font-family: "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+        color: #fff;
+        border: none;
+        outline: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    .settings {
+      margin-left: 10px;
+      cursor: pointer;
+    }
+
+    .settingsBtn {
+      width: 30px;
+      height: 30px;
+      background: url("../../../assets/images/search_settings.png") no-repeat;
+      background-size: contain;
+      margin-left: 10px;
+      outline: none;
+      border: none;
+      cursor: pointer;
+    }
   }
 }
