pipes and directives added

--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -9,7 +9,7 @@
     </li>
     <li>
       <label for="word">name or sentence</label>
-      <input type="text" name="word" value="">
+      <input type="text" name="word" value="" [(ngModel)]="searchInput">
     </li>
   </ul>
 </div>
