--- a/src/app/components/search-item/search-item.component.scss
+++ b/src/app/components/search-item/search-item.component.scss
@@ -1,7 +1,7 @@
 .searchItem {
   width: 263px;
   min-height: 322px;
-  border-bottom: 5px solid red;
+  border-bottom: 5px solid;
   background: #E5E5E5;
   border-radius: 5px;
   -webkit-box-shadow: 6px 9px 19px 0px rgba(94,94,94,1);
