--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <img src="./../assets/images/search_icon.png" alt="search icon" class="logo">
     <div class="searchInput">
       <input type="text" name="" value="" placeholder="What do you want to find out?">
-      <button type="button" name="button">search</button>
+      <button type="button" name="button" (click)="searchItems()">search</button>
     </div>
     <button type="button"
             name="button"
