--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -1,30 +1,30 @@
-<div class="searchItem" *ngFor="let item of searchItems">
+<div class="searchItem" [publicationDate]="publicationDate" appItemBorderColor>
   <div class="thumbnailContainer">
-    <img src={{item.snippet.thumbnails.default.url}} alt="thumbnail" class="itemImg">
+    <img src={{searchItem.snippet.thumbnails.default.url}} alt="thumbnail" class="itemImg">
   </div>
   <div class="actionsContainer">
     <div class="action">
       <img src="./../../assets/images/viewed_icon.png" alt="viewed">
-      <span class="action-data">{{item.statistics.viewCount}}</span>
+      <span class="action-data">{{searchItem.statistics.viewCount}}</span>
     </div>
 
     <div class="action">
       <img src="./../../assets/images/liked_icon.png" alt="likes">
-      <span class="action-data">{{item.statistics.likeCount}}</span>
+      <span class="action-data">{{searchItem.statistics.likeCount}}</span>
     </div>
 
     <div class="action">
       <img src="./../../assets/images/dislike_icon.png" alt="dislike">
-      <span class="action-data">{{item.statistics.dislikeCount}}</span>
+      <span class="action-data">{{searchItem.statistics.dislikeCount}}</span>
     </div>
 
     <div class="action">
       <img src="./../../assets/images/files_icon.png" alt="files">
-      <span class="action-data">{{item.statistics.commentCount}}</span>
+      <span class="action-data">{{searchItem.statistics.commentCount}}</span>
     </div>
 
   </div>
-  <h3 class="itemTitle">{{item.snippet.title}}</h3>
+  <h3 class="itemTitle">{{searchItem.snippet.title}}</h3>
   <div class="btnWrapper">
     <button type="button" name="button" class="itemBtn">more ...</button>
   </div>
