temp changes to auth component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
             (click)="toggleSeetings()"></button>
     <!-- <img src="./../assets/images/search_settings.png" alt="settings" class="settings"> -->
   </div>
-  <app-login></app-login>
+  <app-login-header></app-login-header>
 </div>
 
 <ng-container *ngIf="settingsShown">
