changes to login

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -2,4 +2,4 @@
   <app-search-results *ngIf="searchItemsShown"></app-search-results>
 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
