initial changes to routing

--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -26,6 +26,6 @@
   </div>
   <h3 class="itemTitle">{{searchItem.snippet.title}}</h3>
   <div class="btnWrapper">
-    <button type="button" name="button" class="itemBtn">more ...</button>
+    <button type="button" name="button" class="itemBtn" (click)="redirectToDetails(searchItem.id)">more ...</button>
   </div>
 </div>
