--- a/src/app/components/header/login-header/login-header.component.html
+++ b/src/app/components/header/login-header/login-header.component.html
@@ -1,4 +1,5 @@
 <div class="loginContainer">
   <p class="username">Your name</p>
   <img src="./../assets/images/user_icon.png" alt="user">
+  <button type="button" name="button" (click)="logout()">Logout</button>
 </div>
