--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-main-page></app-main-page>
+<app-header></app-header>
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
