initial changes to API integration

--- a/src/app/youtube/components/search-item/search-item.component.html
+++ b/src/app/youtube/components/search-item/search-item.component.html
@@ -4,11 +4,11 @@
   </div>
 
   <div class="actionsWrapper">
-    <app-actions [viewCount]="searchItem.statistics.viewCount"
+    <!-- <app-actions [viewCount]="searchItem.statistics.viewCount"
                  [likeCount]="searchItem.statistics.likeCount"
                  [dislikeCount]="searchItem.statistics.dislikeCount"
                  [commentCount]="searchItem.statistics.commentCount">
-    </app-actions>
+    </app-actions> -->
   </div>
 
   <h3 class="itemTitle">{{searchItem.snippet.title}}</h3>
