--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="header">
-  <div class="searchContainer">
+  <!-- <div class="searchContainer">
     <img src="./../assets/images/search_icon.png" alt="search icon" class="logo">
     <div class="searchInput">
-      <input type="text" name="" value="" placeholder="What do you want to find out?">
+      <input id="searchInput" type="text" name="" value="" placeholder="What do you want to find out?">
       <button type="button" name="button" (click)="toggleShowResults(this.resultsShown = !this.resultsShown)">search</button>
     </div>
     <button type="button"
             name="button"
             class="settingsBtn"
-            (click)="toggleSeetings()"></button>
+            (click)="toggleSeetings()"></button> -->
     <!-- <img src="./../assets/images/search_settings.png" alt="settings" class="settings"> -->
-  </div>
+  <!-- </div> -->
   <app-login-header></app-login-header>
 </div>
 
