--- a/src/app/youtube/components/search-results/search-results.component.html
+++ b/src/app/youtube/components/search-results/search-results.component.html
@@ -1,4 +1,4 @@
-<div class="searchList" *ngIf="searchItems$ | async as searchItems">
-  <app-search-item *ngFor="let item of searchItems.items | filter: searchInput | sortBy: sortingCriteria"
+<div class="searchList">
+  <app-search-item *ngFor="let item of searchResults.items | filter: searchInput | sortBy: sortingCriteria"
                     [searchItem]="item"></app-search-item>
 </div>
