--- a/src/app/youtube/components/search-input/search-input.component.html
+++ b/src/app/youtube/components/search-input/search-input.component.html
@@ -2,11 +2,11 @@
   <img src="./../assets/images/search_icon.png" alt="search icon" class="logo">
   <div class="searchInput">
     <input #searchInput type="text" name="" value="" placeholder="What do you want to find out?">
-    <button type="button" name="button" (click)="toggleShowResults(this.resultsShown = !this.resultsShown)">search</button>
+    <!-- <button type="button" name="button" (click)="toggleShowResults(this.resultsShown = !this.resultsShown)">search</button> -->
   </div>
   <button type="button"
           name="button"
           class="settingsBtn"
-          (click)="toggleSeetings()"></button>
+          (click)="toggle()"></button>
   <!-- <img src="./../assets/images/search_settings.png" alt="settings" class="settings"> -->
 </div>
