--- a/src/app/youtube/pages/details-page/details-page.component.html
+++ b/src/app/youtube/pages/details-page/details-page.component.html
@@ -1,4 +1,4 @@
-<div class="details" *ngIf="searchItem$ | async as searchItem">
+<div class="details" *ngIf="searchItem">
   <div class="btnBackContainer">
     <button type="button" name="button" (click)="goBack()">
       <img src="" alt="">
