--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,9 +2,9 @@
   background-color: #e5e5e5;
   width: 100%;
   height: 80px;
-  margin-bottom: 45px;
+  // margin-bottom: 45px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
 
   .searchContainer {
