--- a/src/app/youtube/components/search-input/search-input.component.scss
+++ b/src/app/youtube/components/search-input/search-input.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #e5e5e5;
 
   .logo {
     margin-right: 10px;
